--- a/app/src/main/res/layout/coin_row.xml
+++ b/app/src/main/res/layout/coin_row.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="32dp">
+        android:padding="32dp"
+        tools:ignore="MissingConstraints">
 
 
         <TextView
