--- a/app/src/main/res/layout/vacation.xml
+++ b/app/src/main/res/layout/vacation.xml
@@ -12,7 +12,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginBottom="8dp"
-        android:background="@drawable/profile_pic"
+        android:background="@drawable/profile"
         android:src="@drawable/island"
         app:layout_constraintBottom_toTopOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,7 +26,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_weight="1"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:ignore="MissingConstraints">
 
     </LinearLayout>
 
