--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,20 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_color"
+    android:background="#2A9D8F"
     tools:context=".activities.MainActivity">
 
 
-    <TextView
-        android:id="@+id/tvAppTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageView
+        android:id="@+id/app_title"
+        android:layout_width="206dp"
+        android:layout_height="35dp"
         android:layout_marginTop="16dp"
-        android:text="amigo"
-        android:textColor="#000000"
-        android:textSize="20sp"
-        android:textStyle="bold"
+        android:src="@drawable/amigo_tittle"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -27,11 +25,11 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/profile_pic"
-        android:src="@drawable/profile_pic"
+        android:background="@drawable/profile"
+        android:src="@drawable/profile"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvAppTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/app_title" />
 
 
     <androidx.cardview.widget.CardView
@@ -54,7 +52,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:padding="12dp">
-            
+
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -87,7 +85,6 @@
                 android:layout_weight="1"
                 android:orientation="vertical">
 
-
                 <TextView
                     android:id="@+id/editProfileTextView"
                     android:layout_width="match_parent"
@@ -115,7 +112,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cvSummary">
-
         <TextView
             android:id="@+id/friendsTextView"
             android:layout_width="0dp"
@@ -154,7 +150,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/llTabs">
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <LinearLayout
             android:id="@+id/fragmentContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -163,7 +159,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="361dp"
                 android:layout_margin="16dp"
                 android:scrollbars="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
