--- a/app/src/main/res/layout/friend.xml
+++ b/app/src/main/res/layout/friend.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
+    android:background="@drawable/rounded_edit_text"
     android:padding="8dp">
 
 
@@ -13,8 +14,8 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginEnd="28dp"
-        android:background="@drawable/profile_pic"
-        android:src="@drawable/profile_pic"
+        android:background="@drawable/profile"
+        android:src="@drawable/profile"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
