--- a/app/src/main/res/layout/friend.xml
+++ b/app/src/main/res/layout/friend.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:background="@drawable/rounded_edit_text"
     android:padding="8dp">
 
 
@@ -32,6 +31,7 @@
         android:textSize="32sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/profilePic"
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
