--- a/app/src/main/res/layout/vacation.xml
+++ b/app/src/main/res/layout/vacation.xml
@@ -12,11 +12,12 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginBottom="8dp"
-        android:background="@drawable/profile"
-        android:src="@drawable/island"
+        android:src="@drawable/profile"
         app:layout_constraintBottom_toTopOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
+        android:scaleType="centerCrop"
         app:layout_constraintHorizontal_bias="0.0"
+        android:background="@drawable/circle_image"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
