--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,16 +7,21 @@
     android:background="#2A9D8F"
     tools:context=".activities.MainActivity">
 
-    <!-- App Title -->
+    <FrameLayout
+        android:id="@+id/fragmentContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <ImageView
         android:id="@+id/app_title"
         android:layout_width="206dp"
         android:layout_height="35dp"
         android:layout_marginTop="16dp"
+        android:contentDescription="TODO"
         android:src="@drawable/amigo_tittle"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- Profile Picture -->
     <ImageView
@@ -24,11 +29,12 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/profile"
+        android:background="@drawable/circle_image"
+        android:scaleType="centerCrop"
         android:src="@drawable/profile"
-        app:layout_constraintTop_toBottomOf="@id/app_title"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/app_title" />
 
     <!-- CardView for Data List -->
     <androidx.cardview.widget.CardView
@@ -40,10 +46,10 @@
         app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="12dp"
         app:cardElevation="4dp"
-        app:layout_constraintTop_toBottomOf="@id/ivProfilePic"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/addGroupBtn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/addGroupBtn">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ivProfilePic">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -100,9 +106,11 @@
         android:layout_marginTop="16dp"
         android:contentDescription="Plus Sign"
         android:src="@drawable/plus_sign"
-        app:layout_constraintTop_toBottomOf="@id/dataList"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/dataList" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
