--- a/app/src/main/res/layout/friend.xml
+++ b/app/src/main/res/layout/friend.xml
@@ -13,7 +13,8 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginEnd="28dp"
-        android:background="@drawable/profile"
+        android:scaleType="centerCrop"
+        android:background="@drawable/circle_image"
         android:src="@drawable/profile"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
