--- a/app/src/main/res/layout/recycleview_coin.xml
+++ b/app/src/main/res/layout/recycleview_coin.xml
@@ -25,9 +25,8 @@
 
 
     <FrameLayout
-        android:id="@+id/fragment_container"
+        android:id="@+id/fragmentContainerRecycleCoin"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
