--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,6 @@
     android:background="#2A9D8F"
     tools:context=".activities.MainActivity">
 
-    <FrameLayout
-        android:id="@+id/fragmentContainer"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 
     <ImageView
         android:id="@+id/app_title"
@@ -112,5 +108,9 @@
         app:layout_constraintTop_toBottomOf="@id/dataList" />
 
 
-
+    <FrameLayout
+        android:id="@+id/fragmentContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+    </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
