--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,6 +7,11 @@
     android:background="#E0EBE5"
     tools:context=".views.ProfileFragment">
 
+    <FrameLayout
+        android:id="@+id/fragmentContainerProfile"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <View
         android:id="@+id/status_bar"
         android:layout_width="match_parent"
